# vostd

./: .gitignore  2  AGENTS.md  Cargo.toml  INNER_PERMS_MIGRATION_PLAN.md  Makefile  README.md  design_vm_io_virtptr.md  liblib.rlib  vtrace.toml  xtask.log.json
.cargo/: config.toml
.github/workflows/: ci-upstream-verus.yml  ci.yml  doc.yml  format-verify.yml  verus-update-test.yml
aster_common/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
fvt3-page-acquisition-safety/src/: common.rs
lock-protocol-rcu/: Cargo.toml
lock-protocol-rcu/src/: lib.rs
lock-protocol-rw/: Cargo.toml
lock-protocol-rw/src/: lib.rs
lock-protocol/src/: lib.rs
ostd/: Cargo.toml
ostd-pod/: Cargo.toml
ostd-pod/src/: lib.rs
ostd/aster_common/: error.rs  mod.rs  prelude.rs
ostd/specs/: lib.rs  meta_specs.rs  mod.rs  page_table_cursor_specs.rs  page_table_node_specs.rs
ostd/src/: lib.rs
specs/ostd/: Cargo.toml
state_machine/: Cargo.toml
state_machine/src/: action.rs  lib.rs  state_machine.rs
temporal_logic/: Cargo.toml
temporal_logic/src/: defs.rs  lib.rs  rules.rs
tools/alignment-checker/: Cargo.toml  README.md  check.toml
tools/alignment-checker/modules/: mm.toml  rcu.toml
tools/alignment-checker/src/: check.rs  cli.rs  index.rs  main.rs
verified_bitflags/src/: lib.rs
verified_libs/bitflags/: Cargo.toml
verified_libs/bitflags/src/: lib.rs
verified_libs/ostd-pod/: Cargo.toml
verified_libs/vstd_extra/: Cargo.toml
vstd_extra/src/: arithmetic.rs  auxiliary.rs  cast_ptr.rs  deref.rs  drop_tracking.rs  extern_func.rs  extra_num.rs  ghost_tree.rs  lib.rs  manually_drop.rs  map_extra.rs  once.rs  panic.rs  prelude.rs  ptr_extra.rs  raw_callback.rs  raw_ptr_extra.rs  seq_extra.rs  set_extra.rs  std_extra.rs  sub_ptr.rs  sum.rs  trans_macros.rs  undroppable.rs  virtual_ptr.rs
vtrace/: equivalences.html  index.html  links.html  main.css
vtrace/.vtrace/: vtrace.db  vtrace.db-shm  vtrace.db-wal
vtrace/diffs/: 0028ad14-8108-459a-b0dc-18af3fa207a4.html  0090c4d4-5f5b-4054-a811-e61a2b544f7b.html  01fccae1-3538-48fd-85c3-eec996a43bbf.html  02d19df9-73c7-43bc-97a8-1a662e8c19c5.html  03648591-3036-47b2-8f53-59a66d3361de.html  0506861a-0245-4f2e-aba1-fad482afacf3.html  05668546-dfe4-4747-8194-a0f1e4d243e5.html  06c517b4-02d4-4a08-9753-b28c8487f3bd.html  072087eb-d830-42c1-b56f-1b33f2e68256.html  074a351c-c3b1-4753-8db2-cbb0bb717cf7.html  077c2f04-c561-43b4-b743-4443994bcda6.html  078c5822-4663-4bfc-80d0-b6264b9a3d0b.html  07ade141-1f6d-4279-b176-0667d5d6d0a0.html  08846911-5dc2-4945-ba41-cf17fed01619.html  09bc630e-754c-43b3-85b0-5830268908b5.html  0b3b11a3-6b4b-4f9a-b6d5-afc7b275b6f1.html  0b607f94-1df8-4d4c-8326-223bbad57609.html  0b9060ad-7bf0-4f19-a104-fe8fdb168d72.html  0c83dcfa-79e9-4885-9681-cb46a97d4bcd.html  0de10bb3-3f7f-4dda-ba99-f269f8b230e3.html  (+534 more)
xtask/src/: main.rs
(+393 files in other folders)
