[package]
name = "bitflags"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "bitflags"
path = "src/lib.rs"

[package.metadata.verus]
verify = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vstd = { workspace = true }
paste = "1.0"
